fix: resolve z-index issue and implement opacity animation for burger menu navigation

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,30 @@
+.navigation__checkbox:checked ~ .navigation__nav .navigation__item:nth-child(1) {
+  opacity: 1;
+  transition-delay: 0.8s; }
+
+.navigation__checkbox:checked ~ .navigation__nav .navigation__item:nth-child(2) {
+  opacity: 1;
+  transition-delay: 0.9s; }
+
+.navigation__checkbox:checked ~ .navigation__nav .navigation__item:nth-child(3) {
+  opacity: 1;
+  transition-delay: 1s; }
+
+.navigation__checkbox:checked ~ .navigation__nav .navigation__item:nth-child(4) {
+  opacity: 1;
+  transition-delay: 1.1s; }
+
+.navigation__checkbox:checked ~ .navigation__nav .navigation__item:nth-child(5) {
+  opacity: 1;
+  transition-delay: 1.2s; }
+
+.navigation__checkbox:checked ~ .navigation__nav .navigation__item:nth-child(6) {
+  opacity: 1;
+  transition-delay: 1.3s; }
+
+.navigation__checkbox:not(:checked) ~ .navigation__nav .navigation__item {
+  opacity: 0; }
+
 @keyframes wordSlider {
   0%,
   25%,
@@ -455,7 +482,8 @@ body {
   justify-content: space-between;
   padding: 4rem 6rem; }
   .header__logo {
-    max-width: 20rem; }
+    max-width: 20rem;
+    z-index: 2000; }
   .header__nav-list {
     list-style-type: none;
     display: flex;
@@ -561,7 +589,8 @@ body {
   width: 100%; }
 
 .navigation__item {
-  margin: 1rem; }
+  margin: 1rem;
+  opacity: 0; }
 
 .navigation__link:link, .navigation__link:visited {
   display: inline-block;
