--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -9,6 +9,7 @@
 
   &__logo {
     max-width: 20rem;
+    z-index: 2000;
   }
   &__nav {
     &-list {
