--- a/assets/sass/layout/_navigation.scss
+++ b/assets/sass/layout/_navigation.scss
@@ -47,6 +47,9 @@
   }
   &__item {
     margin: 1rem;
+    opacity: 0;
+    // animation: fadeIn 0.5s forwards;
+    // animation: fadeIn 0.5s ease;
   }
   &__link {
     &:link,
@@ -130,6 +133,5 @@
     transform: rotate(-135deg);
   }
 }
-
 
 
